<resources>
    <string name="app_name">Sofraa</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_shop">ShopActivity</string>
    <string name="EnterPass">Enter your pass</string>
    <string name="passMatchat">Pass doesn\'t match</string>
    <string name="invalidPass">Invalid pass</string>
    <string name="EnterEmail">Enter email</string>
    <string name="invalidEmail">Invalid email</string>
    <string name="invalidPhone">Invalid phone</string>
    <string name="EnterNumber">Enter number</string>
    <string name="invalidName">Invalid name</string>
    <string name="EnterNamge">Enter name</string>
    <string name="empity">Empity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search...</string>
    <string name="send">Send</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_pass">Forget password ?</string>
    <string name="create_new_account">Create New Account</string>
    <string name="code">Code</string>
    <string name="confirm_pass">Confirm password</string>
    <string name="change">Change</string>
    <string name="add_rate">Add rate or comment</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="state">State</string>
    <string name="region">Region</string>
    <string name="orders_time">Orders time</string>
    <string name="delevry_time">Delevry time</string>
    <string name="delevry_method">Delevry method</string>
    <string name="lowest">Lowest</string>
    <string name="delevry_cost">Delevry cost</string>
    <string name="minimum_to_order">Minimum order :</string>
    <string name="pls_login">Please login</string>
    <string name="hello">Hello...</string>
    <string name="follow_us">Follow us on :</string>
    <string name="order_time">Order time :</string>
    <string name="special_order">Special order</string>
    <string name="salary">Salary</string>
    <string name="quantity">Quantity</string>
    <string name="total_cost">Total cost  :</string>
    <string name="add_more">Add more</string>
    <string name="do_request">Do request</string>
    <string name="amount">Amount :</string>
    <string name="total">Total :</string>
    <string name="request_number">Request number</string>
    <string name="delice">Delice</string>
    <string name="Restaurant_name">Restaurant Name</string>
    <string name="e_mail">E-Mail</string>
    <string name="confirm_your_password">Confirm your Password</string>
    <string name="Continue">Continue</string>
    <string name="name_of_resturant">Name of Resturant</string>
    <string name="orders_and_delivery">Orders and Delivery</string>
    <string name="communication_data">Communication Data</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="image_of_resturant">Image OF Resturant</string>
    <string name="registration">Registration</string>
    <string name="new_account">انشاء حساب جديد</string>
    <string name="phone">Phone</string>
    <string name="name_of_offer">Name of Offer</string>
    <string name="price">Price</string>
    <string name="date_from">Date From</string>
    <string name="to">To</string>
    <string name="add">Add</string>
    <string name="details_of_offer">Details of Offer</string>
    <string name="add_image">Add Image</string>
    <string name="todo">TODO</string>
    <string name="please_convert_10_from_the_profit_sold_in_a_maximum_period_of_one_month_note_that_all_applications_will_be_recorded_on_your_personal_account">Please convert 10% from the profit sold in a maximum period of one month. Note : that all applications will be recorded on your personal account</string>
    <string name="_5000_pound">5000 pound</string>
    <string name="restaurant_sales">Restaurant sales</string>
    <string name="app_commission">App Commission</string>
    <string name="_500_pound">500 pound</string>
    <string name="what_has_been_paid">What has been paid</string>
    <string name="_300_pound">300 pound</string>
    <string name="residual">Residual</string>
    <string name="_200_pound">200 pound</string>
    <string name="ahli_bank_16546515165">Ahli Bank : 16546515165</string>
    <string name="bank_masr">Bank Masr</string>
    <string name="bank_masr_5165115645">bank_masr : 5165115645</string>
    <string name="sofra_company">Sofra Company</string>
    <string name="add_new_offer">Add New Offer</string>
    <string name="add_new_product">Add New Product</string>
    <string name="add_photo">Add Photo</string>
    <string name="duration_of_application_processing">Duration of application processing</string>
    <string name="brief_description">Brief description</string>
    <string name="product_name">product name</string>
    <string name="burger_sandwitches_drinks">Burger,sandwitches,drinks</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="delivery_method">Delivery method</string>
    <string name="_60_pound">60 Pound</string>
    <string name="_10_pound">10 Pound</string>
    <string name="delegate">Delegate</string>
    <string name="minimum_order">Minimum Order</string>
    <string name="we_re_happy_to_share_your_comment_or_rating">We\'re happy to share your comment or rating</string>
    <string name="add_a_rating_or_comment">Add a rating or comment</string>
    <string name="open">Open</string>
    <string name="city">City</string>
    <string name="cairo">Cairo</string>
    <string name="nasr_city">Nasr City</string>
    <string name="neighborhood">Neighborhood</string>
    <string name="time_requests">Time requests</string>
    <string name="all_week">All Week</string>
    <string name="_24_hours">24 hours</string>
    <string name="delivery_way">Delivery way</string>
    <string name="minimum">Minimum</string>
    <string name="_50_pound">50 pound</string>
    <string name="Case">Case</string>
    <string name="save">Save</string>
    <string name="client">Client :</string>
    <string name="ayman_algebaly">Ayman algebaly</string>
    <string name="code_num">Code Num :</string>
    <string name="Price_">Price :</string>
    <string name="_100_pound">100 pound</string>
    <string name="delivery">Delivery :</string>
    <string name="Total">Total</string>
    <string name="_110_pound">110 pound</string>
    <string name="Total_">Total :</string>
    <string name="address_">Address :</string>
    <string name="_75_sherief_street">75 sherief street</string>
    <string name="confirm_delivery">Confirm delivery</string>
    <string name="Cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="Delivery_Address">Delivery Address</string>
    <string name="Cash_on_delivery">Cash on delivery</string>
    <string name="paying_off">paying off</string>
    <string name="Pound">Pound</string>
    <string name="total_order_cost">Total Order Cost</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="completed_order">Completed Order</string>
    <string name="description">description</string>
    <string name="add_comment">Add Comment</string>
</resources>
