<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.shop.ShopRegisterFragment">

    <!-- TODO: Update blank fragment layout -->


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txt_restuarant_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/strok"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:hint="@string/Restaurant_name"/>

            <Spinner
                style="@style/SpinnerTheme"
                android:id="@+id/spinner_city_restuarant"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:paddingLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:paddingRight="5dp"
                android:layout_below="@id/txt_restuarant_name">

            </Spinner>

            <Spinner
                style="@style/SpinnerTheme"
                android:id="@+id/spinner_region_restuarant"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:paddingLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:paddingRight="5dp"
                android:layout_below="@id/spinner_city_restuarant">

            </Spinner>

            <EditText
                android:id="@+id/txt_restuarant_email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/strok"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:hint="@string/e_mail"
                android:layout_below="@id/spinner_region_restuarant"/>

            <EditText
                android:id="@+id/txt_restuarant_pass"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/strok"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:hint="@string/EnterPass"
                android:layout_below="@id/txt_restuarant_email"/>

            <EditText
                android:id="@+id/txt_restuarant_confi_pass"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/strok"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:hint="@string/confirm_your_password"
                android:layout_below="@id/txt_restuarant_pass"/>

            <Button
                android:id="@+id/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/green"
                android:text="@string/Continue"
                android:textColor="@color/white"
                android:layout_below="@id/txt_restuarant_confi_pass"
                android:layout_marginTop="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>
        </RelativeLayout>

</ScrollView>

</FrameLayout>