<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="end"
    android:orientation="vertical"
    android:padding="10dp"
    android:textAlignment="textEnd">

    <ImageButton
        android:id="@+id/ImgDialogClose"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        android:src="@drawable/ic_close_black_24dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="يسعدنا تقييمك"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtResCommentName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        android:background="@drawable/edit_style_new"
        android:padding="5dp"
        android:textAlignment="textEnd" />

    <EditText
        android:id="@+id/txtCliCommentName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/edit_style_new"
        android:layout_gravity="start"
        android:textAlignment="textStart"
        android:hint="@string/name"
        android:padding="5dp"
        android:textDirection="rtl"/>

    <RatingBar
        android:id="@+id/CommentRating"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:isIndicator="false"
        android:numStars="5"
        android:rating="0.0"
        android:stepSize="1.0" />

    <EditText
        android:id="@+id/txtResCommentdiscription"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        android:background="@drawable/edit_style_new"
        android:gravity="top"
        android:hint="@string/description"
        android:textDirection="rtl"
        android:inputType="textMultiLine"
        android:padding="5dp" />

    <Button

        android:id="@+id/btnCommentAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/green"
        android:text="@string/add_comment"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold|normal" />

</LinearLayout>